--- a/gsi-port-ci.yml
+++ b/gsi-port-ci.yml
@@ -15,6 +15,7 @@ image: ubuntu:22.04
 
 build:
   stage: build
+  tags: [ "ubports" ]
   script:
     - apt update
     - >-
@@ -53,6 +54,7 @@ flashable:
 
 devel-flashable:
   stage: deploy
+  allow_failure: true
   needs: [ "build" ]
   script:
     - apt update
