gsi-port-ci.yml: Add init_boot.img as artifacts

--- a/gsi-port-ci.yml
+++ b/gsi-port-ci.yml
@@ -48,6 +48,7 @@ flashable:
   artifacts:
     paths:
       - out/boot.img
+      - out/init_boot.img
       - out/vendor_boot.img
       - out/system.img
       - out/dtbo.img
@@ -72,6 +73,7 @@ devel-flashable:
   artifacts:
     paths:
       - out/boot.img
+      - out/init_boot.img
       - out/vendor_boot.img
       - out/ubuntu.img
       - out/dtbo.img
