Enable mixed kernel-userland scenarios with deviceinfo_kernel_arch
Adds a new deviceinfo setting 'deviceinfo_kernel_arch' which defaults to
the value of 'deviceinfo_arch', allowing both scenarios where devices
use the same architecture for both kernel- and userspace as well as
mixed ones where the kernel might be aarch64 but userland is armhf.

Co-authored-by: Jami Kettunen <jami.kettunen@protonmail.com>

--- a/deviceinfo.sample
+++ b/deviceinfo.sample
@@ -26,6 +26,15 @@ deviceinfo_codename="yumi"
 #  - x86_64
 deviceinfo_arch="aarch64"
 
+# The architecture of the kernel
+# Devices might run aarch64 kernels with arm userspace
+# Defaults to deviceinfo_arch if not provided
+#  - arm
+#  - arm64 (aarch64 is also accepted)
+#  - x86
+#  - x86_64
+deviceinfo_kernel_arch="arm64"
+
 # The halium version the device is based on:
 #  -  9
 #  - 10
