--- a/deviceinfo.sample
+++ b/deviceinfo.sample
@@ -144,6 +144,9 @@ deviceinfo_bootimg_append_vbmeta="false"
 # Enable for devices launched with Android 13+
 deviceinfo_bootimg_has_init_boot_partition="false"
 
+# Size of the init_boot partition (defaults to 8 MiB when unset)
+deviceinfo_init_boot_partition_size="8388608"
+
 ## DTB(O)
 
 # Whether to use dtc extension or not
